--- a/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x.yaml
+++ b/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x.yaml
@@ -64,6 +64,10 @@ resources:
 tag_specification:
   name: "4.4"
   namespace: ocp
+promotion:
+  name: "cluster-logging-feature-es6x"
+  namespace: ocp
+tests:
 tests:
 - as: unit
   commands: /tmp/run.sh
