--- a/ci-operator/config/openshift/elasticsearch-operator/openshift-elasticsearch-operator-feature-es6x.yaml
+++ b/ci-operator/config/openshift/elasticsearch-operator/openshift-elasticsearch-operator-feature-es6x.yaml
@@ -12,7 +12,7 @@ images:
 - from: base
   to: elasticsearch-operator
 promotion:
-  name: "4.4"
+  name: "cluster-logging-feature-es6x"
   namespace: ocp
 resources:
   '*':
