--- a/ci-operator/jobs/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x-postsubmits.yaml
+++ b/ci-operator/jobs/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x-postsubmits.yaml
@@ -6,6 +6,8 @@ postsubmits:
     decorate: true
     decoration_config:
       skip_cloning: true
+    labels:
+      ci-operator.openshift.io/prowgen-controlled: "true"
     name: branch-ci-openshift-origin-aggregated-logging-feature-es6x-images
     spec:
       containers:
@@ -19,7 +21,6 @@ postsubmits:
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=[images]
-        - --target=src
         command:
         - ci-operator
         env:
