Use dockerfile as we need some binaries

--- a/ci-operator/config/openshift/tektoncd-catalog/openshift-tektoncd-catalog-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-catalog/openshift-tektoncd-catalog-release-next.yaml
@@ -13,10 +13,8 @@ base_images:
     tag: base
 
 build_root:
-  image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+  project_image:
+    dockerfile_path: openshift/Dockerfile
 
 images:
 - dockerfile_path: Dockerfile
