Revert "Use golang1.13 as base image"
This reverts commit 2412cb40d57dfe1d025275e7a9c59ce6bda3da7f.

We cant use this as base image as we need
kubectl binary and this base image
does not have that

--- a/ci-operator/config/openshift/tektoncd-catalog/openshift-tektoncd-catalog-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-catalog/openshift-tektoncd-catalog-release-next.yaml
@@ -4,7 +4,7 @@ tag_specification:
 
 promotion:
   namespace: openshift
-  name: tektoncd-next
+  name: release-next
 
 base_images:
   base:
@@ -13,10 +13,8 @@ base_images:
     tag: base
 
 build_root:
-  image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+  project_image:
+    dockerfile_path: openshift/Dockerfile
 
 images:
 - dockerfile_path: Dockerfile
@@ -27,6 +25,10 @@ images:
       - destination_dir: .
         source_path: /go/src/github.com/openshift/tektoncd-catalog/s2i/.
   to: tektoncd-catalog-s2i
+
+promotion:
+  namespace: openshift
+  name: tektoncd-next
 
 tests:
 - as: e2e
