--- a/ci-operator/config/openshift/tektoncd-cli/openshift-tektoncd-cli-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-cli/openshift-tektoncd-cli-release-next.yaml
@@ -3,19 +3,22 @@ tag_specification:
   namespace: ocp
 promotion:
   namespace: openshift
-  name: tektoncd-next
+  name: release-next
 base_images:
   base:
     name: '4.2'
     namespace: ocp
     tag: base
 build_root:
-  image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+  project_image:
+    dockerfile_path: openshift/Dockerfile
 canonical_go_repository: github.com/tektoncd/cli
 binary_build_commands: make
+
+promotion:
+  namespace: openshift
+  name: tektoncd-next
+
 tests:
 - as: e2e
   commands: "make -C openshift test-e2e-downstream-stable"
