--- a/ci-operator/config/openshift/tektoncd-pipeline/openshift-tektoncd-pipeline-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-pipeline/openshift-tektoncd-pipeline-release-next.yaml
@@ -10,10 +10,8 @@ base_images:
     namespace: ocp
     tag: base
 build_root:
-  image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+  project_image:
+    dockerfile_path: openshift/ci-operator/build-image/Dockerfile
 canonical_go_repository: github.com/tektoncd/pipeline
 binary_build_commands: make install
 images:
