Restore the sctp job to run only when the relevant path changes. Also, restore it to be optional. While changing the name of the job, the settings kept in the job file where lost.
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/ci-operator/jobs/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   openshift-kni/baremetal-deploy:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - master
     context: ci/prow/sctp-e2e-aws
@@ -12,7 +12,9 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-kni-baremetal-deploy-master-sctp-e2e-aws
+    optional: true
     rerun_command: /test sctp-e2e-aws
+    run_if_changed: features/sctp/.*
     spec:
       containers:
       - args:
