--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -1,5 +1,66 @@
 periodics:
 - agent: kubernetes
+  cron: '* 8 * * *'
+  decorate: true
+  decoration_config:
+    skip_cloning: true
+  extra_refs:
+  - base_ref: master
+    org: openshift
+    repo: osde2e
+  labels:
+    ci-operator.openshift.io/prowgen-controlled: "true"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-osde2e-master-addon-prow-operator-test
+  spec:
+    containers:
+    - args:
+      - --artifact-dir=$(ARTIFACTS)
+      - --branch=master
+      - --give-pr-author-access-to-namespace=true
+      - --org=openshift
+      - --repo=osde2e
+      - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+      - --secret-dir=/usr/local/osde2e-common
+      - --secret-dir=/usr/local/osde2e-prow-operator-addon
+      - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
+      - --target=addon-prow-operator-test
+      command:
+      - ci-operator
+      env:
+      - name: CONFIG_SPEC
+        valueFrom:
+          configMapKeyRef:
+            key: openshift-osde2e-master.yaml
+            name: ci-operator-master-configs
+      image: ci-operator:latest
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/osde2e-common
+        name: osde2e-common
+        readOnly: true
+      - mountPath: /usr/local/osde2e-prow-operator-addon
+        name: osde2e-prow-operator-addon
+        readOnly: true
+      - mountPath: /etc/sentry-dsn
+        name: sentry-dsn
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: osde2e-common
+      secret:
+        secretName: osde2e-common
+    - name: osde2e-prow-operator-addon
+      secret:
+        secretName: osde2e-prow-operator-addon
+    - name: sentry-dsn
+      secret:
+        secretName: sentry-dsn
+- agent: kubernetes
   cron: '* */4 * * *'
   decorate: true
   decoration_config:
