--- a/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
+++ b/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
@@ -299,3 +299,28 @@ tests:
     export MINOR_TARGET=2
 
     ci/prow_run_tests.sh /usr/local/osde2e-secrets scale
+
+# Addon tests
+- as: addon-prow-operator
+  artifact_dir: /tmp/artifacts
+  cron: '* 8 * * *'
+  secret:
+    name: osde2e-secrets
+    mount_path: /usr/local/osde2e-secrets
+  container:
+    from: src
+  commands: |
+    set -o pipefail
+
+    export HOME=$(mktemp -d)
+
+    export REPORT_DIR=/tmp/artifacts
+    export DESTROY_CLUSTER=false
+
+    export OSD_ENV=stage
+    export MAJOR_TARGET=4
+    export MINOR_TARGET=2
+    export ADDON_IDS=prow-operator
+    export ADDON_TEST_HARNESSES=quay.io/miwilson/addons-osde2e-testing
+
+    ci/prow_run_tests.sh /usr/local/osde2e-secrets scale
