--- a/ci-operator/config/openshift/origin/openshift-origin-master.yaml
+++ b/ci-operator/config/openshift/origin/openshift-origin-master.yaml
@@ -1,27 +1,33 @@
 base_images:
   base:
+    cluster: https://api.ci.openshift.org
     name: "4.4"
     namespace: ocp
     tag: base
   base-machine:
+    cluster: https://api.ci.openshift.org
     name: fedora
     namespace: openshift
     tag: "29"
   cli:
+    cluster: https://api.ci.openshift.org
     name: "4.4"
     namespace: ocp
     tag: cli
   machine-os-content-base:
+    cluster: https://api.ci.openshift.org
     name: "4.4"
     namespace: ocp
     tag: machine-os-content
   oc-rpms:
+    cluster: https://api.ci.openshift.org
     name: "4.4"
     namespace: ocp
     tag: oc-rpms
 binary_build_commands: make build
 build_root:
   image_stream_tag:
+    cluster: https://api.ci.openshift.org
     name: release
     namespace: openshift
     tag: golang-1.13
@@ -110,10 +116,10 @@ resources:
       memory: 4Gi
   artifacts:
     limits:
-      memory: 1Gi
+      memory: 6Gi
     requests:
-      cpu: 100m
-      memory: 100Mi
+      cpu: 500m
+      memory: 3Gi
   bin:
     limits:
       memory: 12Gi
@@ -182,6 +188,7 @@ resources:
       memory: 8Gi
 rpm_build_commands: make build-rpms
 tag_specification:
+  cluster: https://api.ci.openshift.org
   name: "4.4"
   namespace: ocp
 tests:
