--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -90,6 +90,24 @@ secrets:
     namespace: ci
     name: osde2e-secrets
 - from:
+    namespace: osde2e-secrets
+    name: osde2e-common
+  to:
+    namespace: ci
+    name: osde2e-common
+- from:
+    namespace: osde2e-secrets
+    name: osde2e-credentials
+  to:
+    namespace: ci
+    name: osde2e-credentials
+- from:
+    namespace: osde2e-secrets
+    name: osde2e-prow-operator-addon
+  to:
+    namespace: ci
+    name: osde2e-prow-operator-addon
+- from:
     namespace: ci-release
     name: files-pull-secret
   to:
