fix variable ref

--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -114,7 +114,7 @@ objects:
         # to force a teardown of the cluster, create a configmap with this name on the cluster
         oc get configmap/teardown -n openshift-config
         rc=$?
-        if [ rc -eq 0 ]; then
+        if [ $rc -eq 0 ]; then
           echo "Cluster marked for teardown, tearing down and reinstalling"
           touch /tmp/shared/mustgather
           touch /tmp/shared/teardown
