Improve the link in the mirroring job alert

--- a/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
+++ b/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
@@ -92,7 +92,7 @@ spec:
     - alert: mirroring-failures
       annotations:
         message: '@build-cop image mirroring jobs have failed. View failed jobs at
-          the <https://prow.svc.ci.openshift.org/?job=periodic-image-mirroring-openshift&state=failure|overview>.'
+          the <https://prow.svc.ci.openshift.org/?job=periodic-image-mirroring-openshift|overview>.'
       expr: |
         increase(prowjob_state_transitions{job_name="periodic-image-mirroring-openshift",state="failure"}[5m]) > 0
       for: 1m
