--- a/ci-operator/jobs/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master-presubmits.yaml
@@ -42,7 +42,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: performance-e2e-aws
         - name: TEST_COMMAND
-          value: cd features && source hack/test_env.sh && export FEATURES=performance
+          value: cd features && source hack/test_env.sh && export FEATURES="mcp performance"
             && make deploy && make functests
         image: ci-operator:latest
         imagePullPolicy: Always
@@ -74,7 +74,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )performance-e2e-aws,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - master
     context: ci/prow/sctp-e2e-aws
@@ -85,7 +85,9 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-kni-baremetal-deploy-master-sctp-e2e-aws
+    optional: true
     rerun_command: /test sctp-e2e-aws
+    run_if_changed: features/sctp/.*
     spec:
       containers:
       - args:
