ptp functional tests in openshift-kni
Add a line to test our ptp deployment and functional test

Signed-off-by: Sebastian Sch <sebassch@gmail.com>

--- a/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
@@ -25,7 +25,11 @@ tests:
   - as: performance-e2e-aws
     commands: cd features && source hack/test_env.sh && export FEATURES="mcp performance" && make deploy && make functests
     openshift_installer_src:
-      cluster_profile: aws      
+      cluster_profile: aws
+  - as: ptp-e2e-aws
+    commands: cd features && mv ptp/myvars.example ptp/myvars && source hack/test_env.sh && export FEATURES="ptp" && make deploy && make functests
+    openshift_installer_src:
+      cluster_profile: aws
   - as: unit-tests
     commands: cd features && make unittests
     container:
