installer artifacts: keep text version of instance output

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -837,7 +837,7 @@ objects:
           while IFS= read -r i; do
             mkdir -p "/tmp/artifacts/nodes/${i}"
             if [[ "${CLUSTER_TYPE}" = "aws" ]]; then
-              queue /tmp/artifacts/nodes/$i/console aws ec2 get-console-output --instance-id "${i}"
+              queue /tmp/artifacts/nodes/$i/console aws ec2 get-console-output --instance-id "${i}" --output text
             fi
           done < /tmp/node-provider-IDs
 
