Add rehearse label for origin/master
To ensure rehearsals for PRs, the label should be there for all
presubmits. This is important for migration of jobs to build01
since we use rehearsals to verify if migration works.

https://coreos.slack.com/archives/GB7NB0CUC/p1577992345105500?thread_ts=1577990894.101800&cid=GB7NB0CUC

--- a/ci-operator/jobs/openshift/origin/openshift-origin-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-master-presubmits.yaml
@@ -6,6 +6,8 @@ presubmits:
     - master
     context: ci/prow/artifacts
     decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-origin-master-artifacts
     rerun_command: /test artifacts
     run_if_changed: ^(hack/)|(Makefile)|(.*_(windows|linux|darwin|unsupported)(_test)?\.go)$
