--- a/ci-operator/config/openshift/tektoncd-pipeline/openshift-tektoncd-pipeline-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-pipeline/openshift-tektoncd-pipeline-release-next.yaml
@@ -50,6 +50,14 @@ images:
       - destination_dir: .
         source_path: /go/bin/.
   to: tektoncd-pipeline-git-init
+- dockerfile_path: openshift/ci-operator/tekton-images/gs-utils/Dockerfile
+  from: base
+  inputs:
+    bin:
+      paths:
+        - destination_dir: .
+          source_path: /go/bin/.
+  to: tektoncd-pipeline-gsutil
 - dockerfile_path: openshift/ci-operator/tekton-images/imagedigestexporter/Dockerfile
   from: base
   inputs:
