switch to a custom base image for olm tests

--- a/ci-operator/config/operator-framework/operator-lifecycle-manager/operator-framework-operator-lifecycle-manager-master.yaml
+++ b/ci-operator/config/operator-framework/operator-lifecycle-manager/operator-framework-operator-lifecycle-manager-master.yaml
@@ -4,10 +4,8 @@ base_images:
     namespace: ocp
     tag: base
 build_root:
-  image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+  project_image:
+    dockerfile_path: base.Dockerfile
 images:
 - from: base
   inputs:
