add prow vendor check

--- a/ci-operator/config/integr8ly/heimdall/integr8ly-heimdall-master.yaml
+++ b/ci-operator/config/integr8ly/heimdall/integr8ly-heimdall-master.yaml
@@ -49,6 +49,10 @@ tests:
   commands: make code/check
   container:
     from: src
+- as : vendor
+  commands: make vendor/check
+  container:
+    from: src
 - as: unit
   commands: make test/unit
   container:
