Add csi-driver-manila image for cloud-provider-openstack

--- a/ci-operator/config/openshift/cloud-provider-openstack/openshift-cloud-provider-openstack-master.yaml
+++ b/ci-operator/config/openshift/cloud-provider-openstack/openshift-cloud-provider-openstack-master.yaml
@@ -18,6 +18,14 @@ images:
       - "0"
       paths: null
   to: manila-provisioner
+- dockerfile_path: images/manila-csi-plugin/Dockerfile.openshift.ci
+  from: base
+  inputs:
+    root:
+      as:
+      - "0"
+      paths: null
+  to: csi-driver-manila
 promotion:
   name: "4.4"
   namespace: ocp
