--- a/ci-operator/config/openshift/service-ca-operator/openshift-service-ca-operator-release-4.4.yaml
+++ b/ci-operator/config/openshift/service-ca-operator/openshift-service-ca-operator-release-4.4.yaml
@@ -3,17 +3,19 @@ base_images:
     name: "4.4"
     namespace: ocp
     tag: base
+binary_build_commands: make build --warn-undefined-variables
 build_root:
   image_stream_tag:
     name: release
     namespace: openshift
-    tag: golang-1.12
+    tag: golang-1.13
 images:
-- from: base
+- dockerfile_path: Dockerfile.rhel7
+  from: base
   inputs:
-    root:
+    bin:
       as:
-      - "0"
+      - registry.svc.ci.openshift.org/ocp/builder:golang-1.13
       paths: null
   to: service-ca-operator
 promotion:
