build cop alerts: update rate timespan
This splits alerts into two groups:
* stable - 4.1 and 4.2 jobs which run approx. once a day
* dev - 4.3+ release which run every few hours

This would ensure alerts don't trigger for jobs which run less often -
and hysteresis is not increased for development jobs

--- a/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
+++ b/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
@@ -8,26 +8,15 @@ metadata:
   namespace: prow-monitoring
 spec:
   groups:
-  - name: build-cop-target-low
+  - name: build-cop-target-stable-low
     rules:
-    - alert: branch-.*-images-low
-      annotations:
-        message: '@build-cop `branch-.*-images` jobs are passing at a rate of {{ $value
-          | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
-          and <https://prow.svc.ci.openshift.org/?job=branch-*-images|deck-portal>.'
-      expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"branch-.*-images",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"branch-.*-images",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 100
-      for: 10m
-      labels:
-        severity: critical
-        team: build-cop
     - alert: release-.*-4.1-low
       annotations:
         message: '@build-cop `release-.*-4.1` jobs are passing at a rate of {{ $value
           | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
           and <https://prow.svc.ci.openshift.org/?job=release-*-4.1|deck-portal>.'
       expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.1",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.1",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 80
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.1",job_name!~"rehearse.*",state="success"}[1d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.1",job_name!~"rehearse.*",state=~"success|failure"}[1d])) * 100 < 80
       for: 10m
       labels:
         severity: critical
@@ -38,7 +27,31 @@ spec:
           | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
           and <https://prow.svc.ci.openshift.org/?job=release-*-4.2|deck-portal>.'
       expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.2",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.2",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 80
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.2",job_name!~"rehearse.*",state="success"}[1d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-4.2",job_name!~"rehearse.*",state=~"success|failure"}[1d])) * 100 < 80
+      for: 10m
+      labels:
+        severity: critical
+        team: build-cop
+    - alert: release-.*4.1.*4.2.*-low
+      annotations:
+        message: '@build-cop `release-.*4.1.*4.2.*` jobs are passing at a rate of
+          {{ $value | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
+          and <https://prow.svc.ci.openshift.org/?job=release-*4.1*4.2*|deck-portal>.'
+      expr: |
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.1.*4.2.*",job_name!~"rehearse.*",state="success"}[1d]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.1.*4.2.*",job_name!~"rehearse.*",state=~"success|failure"}[1d])) * 100 < 80
+      for: 10m
+      labels:
+        severity: critical
+        team: build-cop
+  - name: build-cop-target-dev-low
+    rules:
+    - alert: branch-.*-images-low
+      annotations:
+        message: '@build-cop `branch-.*-images` jobs are passing at a rate of {{ $value
+          | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
+          and <https://prow.svc.ci.openshift.org/?job=branch-*-images|deck-portal>.'
+      expr: |
+        sum(rate(prowjob_state_transitions{job="plank",job_name=~"branch-.*-images",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"branch-.*-images",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 100
       for: 10m
       labels:
         severity: critical
@@ -61,17 +74,6 @@ spec:
           and <https://prow.svc.ci.openshift.org/?job=release-*-upgrade*|deck-portal>.'
       expr: |
         sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-upgrade.*",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*-upgrade.*",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 80
-      for: 10m
-      labels:
-        severity: critical
-        team: build-cop
-    - alert: release-.*4.1.*4.2.*-low
-      annotations:
-        message: '@build-cop `release-.*4.1.*4.2.*` jobs are passing at a rate of
-          {{ $value | humanize }}%, which is below the target (100%). Check the <https://grafana-prow-monitoring.svc.ci.openshift.org/d/6829209d59479d48073d09725ce807fa/build-cop-dashboard?orgId=1&fullscreen&panelId=2|dashboard>
-          and <https://prow.svc.ci.openshift.org/?job=release-*4.1*4.2*|deck-portal>.'
-      expr: |
-        sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.1.*4.2.*",job_name!~"rehearse.*",state="success"}[30m]))/sum(rate(prowjob_state_transitions{job="plank",job_name=~"release-.*4.1.*4.2.*",job_name!~"rehearse.*",state=~"success|failure"}[30m])) * 100 < 80
       for: 10m
       labels:
         severity: critical
