Add a default base domain

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
@@ -17,6 +17,7 @@ parameters:
 - name: RELEASE_IMAGE_LATEST
   required: true
 - name: BASE_DOMAIN
+  value: tt.testing
 - name: BUILD_ID
   required: false
 
@@ -315,7 +316,7 @@ objects:
             subnets="[]"
             cat > /tmp/artifacts/installer/install-config.yaml << EOF
         apiVersion: v1
-        baseDomain: ${BASE_DOMAIN:-tt.testing}
+        baseDomain: ${BASE_DOMAIN}
         metadata:
           name: ${CLUSTER_NAME}
         controlPlane:
