Fix base domain concatenation

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
@@ -544,10 +544,10 @@ objects:
     hostAliases:
     - ip: 172.30.211.152
       hostnames:
-      - "alertmanager-main-openshift-monitoring.apps.${NAMESPACE}-${JOB_NAME_HASH}${BASE_DOMAIN}"
-      - "api.${NAMESPACE}-${JOB_NAME_HASH}${BASE_DOMAIN}"
-      - "console-openshift-console.apps.${NAMESPACE}-${JOB_NAME_HASH}${BASE_DOMAIN}"
-      - "downloads-openshift-console.apps.${NAMESPACE}-${JOB_NAME_HASH}${BASE_DOMAIN}"
-      - "grafana-openshift-monitoring.apps.${NAMESPACE}-${JOB_NAME_HASH}${BASE_DOMAIN}"
-      - "oauth-openshift.apps.${NAMESPACE}-${JOB_NAME_HASH}${BASE_DOMAIN}"
-      - "prometheus-k8s-openshift-monitoring.apps.${NAMESPACE}-${JOB_NAME_HASH}${BASE_DOMAIN}"
+      - "alertmanager-main-openshift-monitoring.apps.${NAMESPACE}-${JOB_NAME_HASH}.${BASE_DOMAIN}"
+      - "api.${NAMESPACE}-${JOB_NAME_HASH}.${BASE_DOMAIN}"
+      - "console-openshift-console.apps.${NAMESPACE}-${JOB_NAME_HASH}.${BASE_DOMAIN}"
+      - "downloads-openshift-console.apps.${NAMESPACE}-${JOB_NAME_HASH}.${BASE_DOMAIN}"
+      - "grafana-openshift-monitoring.apps.${NAMESPACE}-${JOB_NAME_HASH}.${BASE_DOMAIN}"
+      - "oauth-openshift.apps.${NAMESPACE}-${JOB_NAME_HASH}.${BASE_DOMAIN}"
+      - "prometheus-k8s-openshift-monitoring.apps.${NAMESPACE}-${JOB_NAME_HASH}.${BASE_DOMAIN}"
