add ec2 instance owner tags to endurance job

--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -358,7 +358,7 @@ objects:
       - name: AWS_REGION
         value: us-east-2
       - name: CLUSTER_NAME
-        value: ${NAMESPACE}-${JOB_NAME_HASH}
+        value: ${NAMESPACE}-endurance-${JOB_NAME_HASH}
       - name: BASE_DOMAIN
         value: ${BASE_DOMAIN}
       - name: SSH_PUB_KEY_PATH
@@ -431,6 +431,7 @@ objects:
             region:       ${AWS_REGION}
             userTags:
               expirationDate: ${EXPIRATION_DATE}
+              owner: bparees
         pullSecret: |
           ${PULL_SECRET}
         sshKey: |
