Fix naming on assets of config-updater on build01
It blocks https://github.com/openshift/release/pull/6554#discussion_r362992978

--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -62,7 +62,7 @@ presubmits:
         - --kubeconfig
         - /etc/build-farm-credentials/kubeconfig
         - --context
-        - ci/api-build01-ci-devcluster-openshift-com:6443/system:serviceaccount:ci:config-updater
+        - ci/api-build01-ci-devcluster-openshift-com:6443
         command:
         - applyconfig
         env:
@@ -101,7 +101,7 @@ presubmits:
       - name: build-farm-credentials
         secret:
           items:
-          - key: sa.kubeconfig
+          - key: sa.config-updater.build01.config
             path: kubeconfig
           secretName: build-farm-credentials
     trigger: (?m)^/test( | .* )build01-dry,?($|\s.*)
