--- a/ci-operator/jobs/openshift/release/openshift-release-master-postsubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-postsubmits.yaml
@@ -13,7 +13,7 @@ postsubmits:
         - --config-dir=clusters/build-clusters/01_cluster
         - --confirm=true
         - --kubeconfig=/etc/build-farm-credentials/kubeconfig
-        - --context=ci/api-build01-ci-devcluster-openshift-com:6443/system:serviceaccount:ci:config-updater
+        - --context=ci/api-build01-ci-devcluster-openshift-com:6443
         command:
         - applyconfig
         env:
@@ -52,7 +52,7 @@ postsubmits:
       - name: build-farm-credentials
         secret:
           items:
-          - key: sa.kubeconfig
+          - key: sa.config-updater.build01.config
             path: kubeconfig
           secretName: build-farm-credentials
   - agent: kubernetes
