--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -57,6 +57,14 @@ images:
       - builder
       paths: null
   to: baremetal-installer
+- dockerfile_path: images/installer/Dockerfile.ci
+  from: base
+  inputs:
+    root:
+      as:
+      - build
+      paths: null
+  to: ovirt-installer
 promotion:
   name: "4.4"
   namespace: ocp
@@ -110,6 +118,12 @@ resources:
       cpu: "3"
       memory: 5Gi
   upi-installer:
+    limits:
+      memory: 9Gi
+    requests:
+      cpu: "3"
+      memory: 5Gi
+  ovirt-installer:
     limits:
       memory: 9Gi
     requests:
