--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
@@ -4992,3 +4992,86 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
+- agent: kubernetes
+  decorate: true
+  decoration_config:
+    skip_cloning: true
+  interval: 24h
+  labels:
+    ci.openshift.io/release-type: informing
+    job-env: ovirt
+    job-release: "4.4"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: release-openshift-ocp-installer-e2e-ovirt-4.4
+  spec:
+    containers:
+    - args:
+      - --artifact-dir=$(ARTIFACTS)
+      - --give-pr-author-access-to-namespace=true
+      - --secret-dir=/usr/local/pull-secret
+      - --secret-dir=/usr/local/e2e-ovirt-cluster-profile
+      - --target=e2e-ovirt
+      - --template=/usr/local/e2e-ovirt
+      - --input-hash=$(BUILD_ID)
+      - --input-hash=$(JOB_NAME)
+      command:
+      - ci-operator
+      env:
+      - name: RELEASE_IMAGE_LATEST
+        value: registry.svc.ci.openshift.org/ocp/release:4.4
+      - name: BRANCH
+        value: "4.4"
+      - name: CLUSTER_TYPE
+        value: ovirt
+      - name: LEASE_STATE
+        value: conformance
+      - name: CONFIG_SPEC
+        value: |
+          tag_specification:
+            name: "$(BRANCH)"
+            namespace: ocp
+          resources:
+            '*':
+              limits:
+                memory: 4Gi
+              requests:
+                cpu: 100m
+                memory: 200Mi
+          tests:
+          - as: e2e-$(CLUSTER_TYPE)-parallel
+            commands: TEST_SUITE=openshift/conformance/parallel run-tests
+            openshift_installer:
+              cluster_profile: "$(CLUSTER_TYPE)"
+      - name: JOB_NAME_SAFE
+        value: e2e-ovirt
+      - name: TEST_COMMAND
+        value: TEST_SUITE=openshift/conformance/parallel run-tests
+      image: ci-operator:latest
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/e2e-ovirt-cluster-profile
+        name: cluster-profile
+      - mountPath: /usr/local/e2e-ovirt
+        name: job-definition
+        subPath: cluster-launch-installer-ovirt-e2e.yaml
+      - mountPath: /usr/local/pull-secret
+        name: pull-secret
+    serviceAccountName: ci-operator
+    volumes:
+    - name: cluster-profile
+      projected:
+        sources:
+        - secret:
+            name: cluster-secrets-ovirt
+        - secret:
+            name: ovirt-infra-secrets
+    - configMap:
+        name: prow-job-cluster-launch-installer-ovirt-e2e
+      name: job-definition
+    - name: pull-secret
+      secret:
+        secretName: ci-pull-credentials
