--- a/core-services/release-controller/_releases/release-ocp-4.4.json
+++ b/core-services/release-controller/_releases/release-ocp-4.4.json
@@ -97,6 +97,10 @@
     "azure-ovn":{
       "optional":true,
       "prowJob":{"name":"release-openshift-ocp-installer-e2e-azure-ovn-4.4"}
+    },
+    "ovirt":{
+      "optional":true,
+      "prowJob":{"name":"release-openshift-ocp-installer-e2e-ovirt-4.4"}
     }
   }
 }
