--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -200,6 +200,18 @@ secrets:
     name: sshd-host-keys
 - from:
     namespace: ci
+    name: sshd-authorized-keys-ppc64le
+  to:
+    namespace: bastion-ppc64le
+    name: sshd-authorized-keys
+- from:
+    namespace: ci
+    name: sshd-host-keys-ppc64le
+  to:
+    namespace: bastion-ppc64le
+    name: sshd-host-keys
+- from:
+    namespace: ci
     name: sshd-authorized-keys-telco
   to:
     namespace: bastion-telco
