--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -423,7 +423,10 @@ tide:
     openshift/template-service-broker-operator: squash
     redhat-developer/openshift-jenkins-operator: rebase
     redhat-developer/service-binding-operator: squash
-  pr_status_base_url: https://prow.svc.ci.openshift.org/pr
+  pr_status_base_urls:
+    '*': https://prow.svc.ci.openshift.org/pr
+    openshift-priv: https://deck-internal-ci.svc.ci.openshift.org/pr
+    openshift/private-ci-testing: https://deck-internal-ci.svc.ci.openshift.org/pr
   queries:
   - includedBranches:
     - release-4.0
