Adapt Prow config for upstream struct changes

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -278,7 +278,10 @@ github_reporter:
   job_types_to_report:
   - presubmit
   - postsubmit
-in_repo_config: {}
+in_repo_config:
+  allowed_clusters:
+    '*':
+    - default
 jenkins_operators:
 - job_url_template: https://prow.svc.ci.openshift.org/view/gcs/origin-{{if eq .Spec.Type
     "presubmit"}}{{if eq .Spec.Refs.Org "kubernetes"}}federated-results{{else if eq
