Enable lifecycle for odo part 2

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -213,6 +213,7 @@ periodics:
         repo:tnozicka/openshift-acme
         repo:openshift/openshift-azure
         repo:openshift/release
+        repo:openshift/odo
         -label:lifecycle/frozen
         label:lifecycle/stale
         -label:lifecycle/rotten
@@ -264,6 +265,7 @@ periodics:
         repo:tnozicka/openshift-acme
         repo:openshift/openshift-azure
         repo:openshift/release
+        repo:openshift/odo
         -label:lifecycle/frozen
         -label:lifecycle/stale
         -label:lifecycle/rotten
