--- a/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x.yaml
+++ b/ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature-es6x.yaml
@@ -65,7 +65,7 @@ tag_specification:
   name: "4.4"
   namespace: ocp
 promotion:
-  name: "cluster-logging-feature-es6x"
+  name: "feature-es6x"
   namespace: ocp
 tests:
 tests:
