--- a/ci-operator/config/openshift/cluster-logging-operator/openshift-cluster-logging-operator-feature-es6x.yaml
+++ b/ci-operator/config/openshift/cluster-logging-operator/openshift-cluster-logging-operator-feature-es6x.yaml
@@ -12,7 +12,7 @@ images:
 - from: base
   to: cluster-logging-operator
 promotion:
-  name: "cluster-logging-feature-es6x"
+  name: "feature-es6x"
   namespace: ocp
 resources:
   '*':
