--- a/clusters/build-clusters/01_cluster/assets/admin_default_clusterautoscaler.yaml
+++ b/clusters/build-clusters/01_cluster/assets/admin_default_clusterautoscaler.yaml
@@ -1,3 +1,17 @@
+#https://docs.openshift.com/container-platform/4.2/machine_management/applying-autoscaling.html
+#https://coreos.slack.com/archives/CBZHF4DHC/p1578326297014800
+#oc --kubeconfig ./.kube/build01.config get machine -n openshift-machine-api
+#NAME                                    STATE     TYPE         REGION      ZONE         AGE
+#build01-88trw-master-0                  running   m5.2xlarge   us-east-1   us-east-1a   81d
+#build01-88trw-master-1                  running   m5.2xlarge   us-east-1   us-east-1b   81d
+#build01-88trw-master-2                  running   m5.2xlarge   us-east-1   us-east-1c   81d
+#build01-88trw-worker-us-east-1a-vpgvp   running   m5.4xlarge   us-east-1   us-east-1a   81d
+#build01-88trw-worker-us-east-1b-ffdlz   running   m5.4xlarge   us-east-1   us-east-1b   81d
+#build01-88trw-worker-us-east-1c-4xgkq   running   m5.4xlarge   us-east-1   us-east-1c   81d
+#https://aws.amazon.com/ec2/instance-types/m5/
+#Instance Size vCPU	Memory (GiB)
+#m5.4xlarge	  16	  64
+---
 apiVersion: "autoscaling.openshift.io/v1"
 kind: "ClusterAutoscaler"
 metadata:
@@ -7,10 +21,10 @@ spec:
   resourceLimits:
     maxNodesTotal: 36
     cores:
-      min: 2
-      max: 16
+      min: 48
+      max: 192
     memory:
-      min: 2
-      max: 64
+      min: 192
+      max: 768
   scaleDown:
     enabled: true
