Use ClusterIP for GHProxy deployment
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/prow/03_deployment/ghproxy.yaml
+++ b/core-services/prow/03_deployment/ghproxy.yaml
@@ -37,7 +37,7 @@ items:
     selector:
       app: prow
       component: ghproxy
-    type: NodePort
+    type: ClusterIP
 - apiVersion: apps/v1
   kind: Deployment
   metadata:
