Add images for csi-snapshot-controller

--- a/ci-operator/config/openshift/csi-external-snapshotter/openshift-csi-external-snapshotter-release-4.4.yaml
+++ b/ci-operator/config/openshift/csi-external-snapshotter/openshift-csi-external-snapshotter-release-4.4.yaml
@@ -18,6 +18,14 @@ images:
       - "0"
       paths: null
   to: csi-external-snapshotter
+- dockerfile_path: Dockerfile.snapshot-controller.openshift
+  from: base
+  inputs:
+    root:
+      as:
+      - "0"
+      paths: null
+  to: csi-snapshot-controller
 promotion:
   disabled: true
   name: "4.4"
