Add tide to openshift/cluster-csi-snapshot-controller-operator

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -513,6 +513,7 @@ tide:
     - openshift/cluster-autoscaler-operator
     - openshift/cluster-bootstrap
     - openshift/cluster-config-operator
+    - openshift/cluster-csi-snapshot-controller-operator
     - openshift/cluster-dns-operator
     - openshift/cluster-image-registry-operator
     - openshift/cluster-ingress-operator
@@ -707,6 +708,7 @@ tide:
     - openshift/cluster-autoscaler-operator
     - openshift/cluster-bootstrap
     - openshift/cluster-config-operator
+    - openshift/cluster-csi-snapshot-controller-operator
     - openshift/cluster-dns-operator
     - openshift/cluster-image-registry-operator
     - openshift/cluster-ingress-operator
@@ -911,6 +913,7 @@ tide:
     - openshift/cluster-autoscaler-operator
     - openshift/cluster-bootstrap
     - openshift/cluster-config-operator
+    - openshift/cluster-csi-snapshot-controller-operator
     - openshift/cluster-dns-operator
     - openshift/cluster-etcd-operator
     - openshift/cluster-image-registry-operator
