--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -100,6 +100,9 @@ approve:
 - repos:
   - openshift-kni/performance-addon-operators
   require_self_approval: false
+- repos:
+  - openshift/cluster-csi-snapshot-controller-operator
+  require_self_approval: false
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -1231,6 +1234,9 @@ lgtm:
 - repos:
   - openshift-kni/performance-addon-operators
   review_acts_as_lgtm: true
+- repos:
+  - openshift/cluster-csi-snapshot-controller-operator
+  review_acts_as_lgtm: true
 override:
   allow_top_level_owners: true
 owners:
@@ -1869,6 +1875,8 @@ plugins:
   openshift/cluster-bootstrap:
   - approve
   openshift/cluster-config-operator:
+  - approve
+  openshift/cluster-csi-snapshot-controller-operator:
   - approve
   openshift/cluster-dns-operator:
   - approve
