Add ovirt lease resources
-Extend the number of ovirt-quota resources
 from2 to 4, since we now support 4 parallel runs.
-Adds ovirt-bm01/2 resources which will be used for
 resource-consuming tasks such as conformance runs

Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/core-services/prow/02_config/_boskos.yaml
+++ b/core-services/prow/02_config/_boskos.yaml
@@ -29,4 +29,13 @@ resources:
   names:
   - "ovirt-00"
   - "ovirt-01"
-  
+  - "ovirt-02"
+  - "ovirt-03"
+- type: ovirt-bm01
+  state: free
+  names:
+  - "ovirt-bm01"
+- type: ovirt-bm02
+  state: free
+  names:
+  - "ovirt-bm02"
