Use new target for integreatly-operator e2e tests

--- a/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master-presubmits.yaml
@@ -40,7 +40,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e
         - name: TEST_COMMAND
-          value: make test/e2e
+          value: make test/e2e/prow
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
