--- a/ci-operator/config/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master.yaml
+++ b/ci-operator/config/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master.yaml
@@ -54,7 +54,7 @@ tests:
   container:
     from: src
 - as: e2e
-  commands: make test/e2e
+  commands: make test/e2e/prow
   openshift_installer_src:
     cluster_profile: aws
 - as: e2e-olm
