Revert "Use ClusterIP for GHProxy deployment"

--- a/core-services/prow/03_deployment/ghproxy.yaml
+++ b/core-services/prow/03_deployment/ghproxy.yaml
@@ -37,7 +37,7 @@ items:
     selector:
       app: prow
       component: ghproxy
-    type: ClusterIP
+    type: NodePort
 - apiVersion: apps/v1
   kind: Deployment
   metadata:
