--- a/core-services/prow/02_config/_labels.yaml
+++ b/core-services/prow/02_config/_labels.yaml
@@ -481,6 +481,13 @@ repos:
       - color: 00D8FF
         description: Related to git-service
         name: component/git-service
+        target: both
+        addedBy: label
+      - color: 00D8FF
+        description: Related to network-attachment-definition
+        name: component/network-attachment-definition
+        target: both
+        addedBy: label
   openshift/knative-serving:
     labels:
       - color: 00D8FF
