Add entry for new template from PR #6146
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -585,6 +585,12 @@ config_updater:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-libvirt-e2e
+    ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-src.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: prow-job-cluster-launch-installer-libvirt-src
     ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml:
       clusters:
         default:
