--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -1487,7 +1487,7 @@ presubmits:
               name: ci-operator-master-configs
         - name: JOB_NAME_SAFE
           value: e2e-ovirt
-        - name: LEASE_STATE
+        - name: LEASE_TYPE
           value: minimal
         - name: TEST_COMMAND
           value: run-minimal-tests
