--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
@@ -5023,7 +5023,7 @@ periodics:
         value: "4.4"
       - name: CLUSTER_TYPE
         value: ovirt
-      - name: LEASE_STATE
+      - name: LEASE_TYPE
         value: conformance
       - name: CONFIG_SPEC
         value: |
