Enable approve for openshift/docker-distribution

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1981,6 +1981,8 @@ plugins:
   - approve
   openshift/descheduler-operator:
   - approve
+  openshift/docker-distribution:
+  - approve
   openshift/elasticsearch-operator:
   - approve
   openshift/elasticsearch-proxy:
