another config change

--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-periodics.yaml
@@ -3,9 +3,9 @@ periodics:
   - agent: kubernetes
     name: periodic-ci-openshift-osde2e-master-e2e-stage-4.2
     cron: '* */4 * * *'
-    always_run: true
     branches:
     - master
+    decorate: true
     decoration_config:
       skip_cloning: true
     extra_refs:
