SDCICD-123. For production osde2e upgrades, use CISes if possible.
For production, cluster image sets will be used along with the current
default version.

--- a/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
+++ b/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
@@ -229,9 +229,8 @@ tests:
     export DESTROY_CLUSTER=false
 
     export OSD_ENV=prod
-    export MAJOR_TARGET=4
-    export MINOR_TARGET=2
     export UPGRADE_RELEASE_STREAM=fast-4.2
+    export UPGRADE_TO_CIS_IF_POSSIBLE=true
 
     ci/prow_run_tests.sh /usr/local/osde2e-secrets
 
