--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-periodics.yaml
@@ -1,5 +1,4 @@
 periodics:
-  openshift/osde2e:
   - agent: kubernetes
     name: periodic-ci-openshift-osde2e-master-e2e-stage-4.2
     cron: '* */4 * * *'
@@ -32,6 +31,9 @@ periodics:
         image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
         imagePullPolicy: Always
         name: ""
+        resources:
+          requests:
+            cpu: 10m
         volumeMounts:
         - mountPath: /usr/local/osde2e-secrets
           name: osde2e-secrets
