--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -495,6 +495,42 @@ periodics:
     org: openshift
     repo: osde2e
   labels:
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-osde2e-master-e2e-stage-4.2
+  spec:
+    containers:
+    - args:
+      - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=/tmp/artifacts;
+        export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
+        export MINOR_TARGET=2; ci/prow_run_tests.sh /usr/local/osde2e-secrets
+      command:
+      - /bin/bash
+      - -c
+      image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/osde2e-secrets
+        name: osde2e-secrets
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: osde2e-secrets
+      secret:
+        secretName: osde2e-secrets
+- agent: kubernetes
+  cron: '* */4 * * *'
+  decorate: true
+  decoration_config:
+    skip_cloning: true
+  extra_refs:
+  - base_ref: master
+    org: openshift
+    repo: osde2e
+  labels:
     ci-operator.openshift.io/prowgen-controlled: "true"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: periodic-ci-openshift-osde2e-master-e2e-stage-4.2-4.2
