--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -503,8 +503,8 @@ periodics:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=/tmp/artifacts;
         export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; cd /go/src/github.com/openshift/osde2e; pwd; ls;
-        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets
+        export MINOR_TARGET=2; cd /go/src/github.com/openshift; git clone https://github.com/openshift/osde2e.git;
+        cd osde2e; pwd; ls; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
