--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -488,13 +488,10 @@ periodics:
 - agent: kubernetes
   cron: '* */4 * * *'
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
   - base_ref: master
     org: openshift
     repo: osde2e
-    workdir: true
   labels:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: periodic-ci-openshift-osde2e-master-e2e-stage-4.2
@@ -503,8 +500,7 @@ periodics:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=/tmp/artifacts;
         export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; cd /go/src/github.com/openshift; git clone https://github.com/openshift/osde2e.git;
-        cd osde2e; pwd; ls; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
+        export MINOR_TARGET=2; pwd; ls; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
