SDCICD-116. Introduce stage and prod 4.3 candidate upgrade pipelines.
4.3 candidate pipelines have been introduced for stage and prod.

--- a/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
+++ b/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
@@ -211,6 +211,27 @@ tests:
 
     ci/prow_run_tests.sh /usr/local/osde2e-secrets
 
+- as: e2e-stage-4.2-4.3
+  artifact_dir: /tmp/artifacts
+  cron: '* */4 * * *'
+  secret:
+    name: osde2e-secrets
+    mount_path: /usr/local/osde2e-secrets
+  container:
+    from: src
+  commands: |
+    set -o pipefail
+
+    export HOME=$(mktemp -d)
+
+    export REPORT_DIR=/tmp/artifacts
+    export DESTROY_CLUSTER=false
+
+    export OSD_ENV=stage
+    export UPGRADE_RELEASE_STREAM=candidate-4.3
+
+    ci/prow_run_tests.sh /usr/local/osde2e-secrets
+
 # --- Production
 - as: e2e-prod-4.2-4.2
   artifact_dir: /tmp/artifacts
@@ -231,6 +252,27 @@ tests:
     export OSD_ENV=prod
     export UPGRADE_RELEASE_STREAM=fast-4.2
     export UPGRADE_TO_CIS_IF_POSSIBLE=true
+
+    ci/prow_run_tests.sh /usr/local/osde2e-secrets
+
+- as: e2e-prod-4.2-4.3
+  artifact_dir: /tmp/artifacts
+  cron: '* */4 * * *'
+  secret:
+    name: osde2e-secrets
+    mount_path: /usr/local/osde2e-secrets
+  container:
+    from: src
+  commands: |
+    set -o pipefail
+
+    export HOME=$(mktemp -d)
+
+    export REPORT_DIR=/tmp/artifacts
+    export DESTROY_CLUSTER=false
+
+    export OSD_ENV=prod
+    export UPGRADE_RELEASE_STREAM=candidate-4.3
 
     ci/prow_run_tests.sh /usr/local/osde2e-secrets
 
