Mirroring quay.io pull image secret

--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -258,3 +258,9 @@ secrets:
   to:
     namespace: ci-release-s390x
     name: source
+- from:
+    namespace: lmilbaum-secrets
+    name: openshift-cnv-dev-cnv-bot-pull-secret
+  to:
+    namespace: ci
+    name: openshift-cnv-dev-cnv-bot-pull-secret
