Mount pull secret

--- a/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master.yaml
+++ b/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master.yaml
@@ -19,6 +19,9 @@ tests:
       set -euo pipefail
       echo "Running CNV product test"
       ./bootstrap.sh
+    secrets:
+      - name: openshift-cnv-dev-cnv-bot-pull-secret
+        mount_path: /etc/cnv-installer/pull-secret
 
     openshift_installer_src:
       cluster_profile: gcp
